fix event spacing

--- a/style.css
+++ b/style.css
@@ -404,8 +404,11 @@ h1,h2,h3 {
 .eventTitle p {
   padding: 0;
   margin: 0;
-  font-size: 0.75em;
+  font-size: 0.9em;
   color: rgb(138, 138, 138);
+  position: relative;
+  top: 25%;
+
 
 }
 
